# polls

./: .gitignore  LICENSE  pyproject.toml
polls/: models.py
