[project]
name = "polls"
version = "0.1.0"
description = "A simple poll application that uses DynamoDB, based on the Django tutorial"
authors = [
    { name = "Sergio Merino Hernández", email = "merinhunter94@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pynamodb (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
